force-app/main/default/objects/Integration_Definition__c/Integration_Definition__c.object-meta.xml
<CustomObject>
    <label>Integration Definition</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>