force-app/main/default/objects/Integration_Definition__c/fields/External_Object__c.field-meta.xml
<CustomField>
    <fullName>External_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Object</label>
    <type>Checkbox</type>
</CustomField>