force-app/main/default/objects/Integration_Definition__c/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <label>HTTP Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>