force-app/main/default/objects/Integration_Definition__c/fields/Integration_Target__c.field-meta.xml
<CustomField>
    <fullName>Integration_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Target</label>
    <referenceTo>Integration_Target__c</referenceTo>
    <relationshipLabel>Integration Definitions</relationshipLabel>
    <relationshipName>Integration_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>