force-app/main/default/objects/Integration_Definition__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration User</label>
    <type>Checkbox</type>
</CustomField>