force-app/main/default/objects/Integration_Definition__c/fields/Mock_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Mock_Class_Name__c</fullName>
    <label>Mock Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>