force-app/main/default/objects/Integration_Definition__c/fields/Output_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Output_Namespace__c</fullName>
    <label>Output Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>