force-app/main/default/objects/Integration_Definition__c/fields/URL_Method__c.field-meta.xml
<CustomField>
    <fullName>URL_Method__c</fullName>
    <label>URL Method</label>
    <length>25</length>
    <type>Text</type>
</CustomField>