force-app/main/default/objects/Integration_Definition__c/fields/Use_Mock_Class__c.field-meta.xml
<CustomField>
    <fullName>Use_Mock_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Mock Class</label>
    <type>Checkbox</type>
</CustomField>