force-app/main/default/objects/Integration_Definition__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>