force-app/main/default/objects/Integration_Definition__c/validationRules/Mock_Class_Name_required_when_Use_Mock.validationRule-meta.xml
<ValidationRule>
    <fullName>Mock_Class_Name_required_when_Use_Mock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Use_Mock_Class__c = true, Len(Mock_Class_Name__c) = 0)</errorConditionFormula>
    <errorMessage>You need to enter a Mock Class Name when you select the Use Mock function</errorMessage>
</ValidationRule>